--- a/_posts/book/tdd/2020-05-09-tdd-07.md
+++ b/_posts/book/tdd/2020-05-09-tdd-07.md
@@ -280,307 +280,270 @@ public class EmployeeSearchServletTest {
 
 #### 7.2.4 모델 TDD
 
+![]({{site.url}}/assets/images/tdd8.PNG)
 
+* 도메인 모델, 서비스 모델 두 개로 나뉨.
+* 흔히 데이터와 로직이라고 부름
+* 도메인 모델로 DTO가 많이 사용되므로 DTO와 Biz라고도 함
 
 
 
+##### 7.2.4.1 도메인 모델에 의한 TDD
 
+* 대표적으로 DTO
+* TDD를 거의 작성할일이 없음
+* 테스트 커버리지율 측면에서 간단히 만드는 것도 나쁘지는 않음
 
+##### 7.2.4.2 서비스 모델에 의한 TDD
 
+* 서비스 모델은 기능 위주로 구성된 클래스
 
+* DTO를 비롯한 여러 다른 도메인 클래스들을 사용하는 애플리케이션의 핵심적인 부분
+* MVC 모델에서 TDD로 작성했을 때 가장 빛나는 부분
+* 하면 할수록 좋다!
+* 단순 화면이나 DB사이의 통로 역할일 경우는 TDD에 대해서 논의해 볼 법함
 
 
 
+##### 7.2.4.3 기타 서비스 모델
 
+* 인증, 권한처리 같은 공통사항은 기반이 되는 프레임워크가 처리해준다.
+* 모델이 하는일이라고는 SQL과 DAO를 연결해주는 것과 결과 값을 객체로 받는 것이 전부인 서비스 모델이 있다.
 
+* 이런 경우 TDD를 한정적으로 적용
+* DAO를 통해서 넘어온 결과의 건수, 헤더에 해당하는 컬럼이름의 일치 여부 정도를 목표로 TDD 작성
 
+* 모델 테스트가 SQL 정상 작성 테스트에 더 가깝게 변함.
+* SQL문을 변경하면 즉시 모델에 에러가 발견
+* 가끔 TDD의 의미를 잊고 해더비교하는 부분을 SQL 파일에서 복사한다던가 SQL 실행 결과를 붙이는 경우가 있는데 잘못 된 경우.
+* 그건 DAO가 정상 동작하는지 테스트 하는 것.
+* TDD의 목표는 처음 목표의 이미지에 도달하도록 구현되었는지 판별하는 것.
+* 따라서 헤더 컬럼이름은 화면이나 화면설계서를 보고 assert문을 작성해야 함.
 
 
 
+##### 7.2.4.4 DTO, VO, DO, DAO, ENTITY, JavaBean
 
+* 모델은 서비스와 데이터로 나뉜다.
+* 서비스에서 사용하는 데이터 객체는 일반적으로 DO(Domain Object)라고 불린다.
+* DTO는 데이터 전달을 위해 사용하는 객체. 비즈니스 구현이 없다. 이전에는 VO로 불림
+* JavaBean은 재사용을 위해 정의된 자바 컴포넌트. DTO로 많이 사용되는데 반드시 set/get으로 시작하는 이름의 메소드로만 데이터를 접근해야 한다.
+* DAO는 DB나 File등과 데이터를 주고 받기 위한 객체. 매개체로 DTO를 사용
+* DAO를 서비스에 포함시키는 것이 일반적. 가끔 나누기도 함.
+* Entity는 데이터 모델링에서 쓰이는 표현으로 DB 테이블을 말함.
+* Entity 클래스라고 불리는 클래스들은 DB의 Entity 클래스 구조를 만들어 놓은 모습. 프로그램으로 구현될 때 DO/DTO 모습을 갖는 것.
 
 
 
 
 
+##### 7.2.4.5 웹 애플리케이션에 대한 TDD 접근 전략 정리
 
+* 모델과 뷰의 컨트롤러를 최대한 분리시킨다.
+* 뷰는 단순히 표현 계층으로 보고 업무로직이 들어가지 않도록 유지한다.
+* 뷰에 대한 TDD는 ROI를 잘 따져보고, 필요하다면 TDD를 포기하고 Record & Play 방식의 툴을 사용해 기능 테스트나 회귀 테스트의 비용을 줄이는 쪽으로 생산성을 높이자.
+* 컨트롤러가 프레임워크 차원에서 지원될 때는 굳이 테스트 케이스를 만들려고 하지 않는다.
+* 모델에 의한 TDD는 최대한 적용한다.
 
 
 
+### 7.3 데이터베이스
 
+* TDD는 흔히 두 가지 경우를 예상. 상태와 동작
+* 각각에 대해서 테스트는 어렵지 않으나 섞이면 복잡
+* 대표적으로 DB
+* 어려운 이유는 다음과 같다.
+  1. 데이터의 상태가 바뀜
+  2. 테스트 전/후의 비교가 쉽지 않음
 
 
 
+#### 7.3.1 데이터베이스 상태가 바뀌는 문제의 일반적인 해결 방법
 
+* 모든 방법이 최선은 아니다. 각 문제에 대해서 최대한의 해결을 찾는 것 뿐
 
 
 
+##### 7.3.1.1 트랜잭션을 선언하고 테스트 케이스를 수행한 다음 롤백처리
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-```
-@DataSet("seller.xml")
-@DataSet("seller.xml", "item.xml")
-```
-
-* 클래스가 아닌 메소드 레벨에서도 지정 가능
+* 트랜젝션 선언만 처리하면 되므로 케이스 작성이 쉬움
+* 테스트 케이스 작성 목적이 트랜젝션 처리인 경우 적용 불가
+* 트랜젝션을 테스트 내에서 제어할 수 없는 경우도 적용 불가
+* @BeforeClass를 이용하여 클래스 단위로 트랜젝션 관리도 할 수 있음
 
 ```java
-@Test
-@DataSet("DatabaseRepositoryTest.testAddNewSeller.xml")
-public void testAddNewSeller() throws Exception {
-    Seller newSeller = new Seller("hssm","이동욱","scala@hssm.kr");
-    Repository repository = new DatabaseRepository();
-}
-```
-
-
-
-##### 6.4.1.1 데이터셋 로드 전략
-
-* 데이터셋 사용하는 동작에 여러가지가 있다. (위에는 CLEAN_INSERT가 사용)
-* 두 가지 방식이 있다.
-
-```properties
-# unitils.properties에 설정한 경우
-DbUnitModule.DataSet.loadStrategy.default=org.unitils.dbunit.datasetloadstrategy.InsertLoadStrategy
-```
-
-```java
-// 애노테이션으로 지정한 경우
-@DataSet(loadStrategy = InsertLoadStrategy.class)
-```
-
-* 아래는 종류. 자세한건 5장의 DbUnit의 DatabaseOperation 항목 보기
-
-| 종류                    | 설명                                                         |
-| ----------------------- | ------------------------------------------------------------ |
-| CleanInsertLoadStrategy | 대상 테이블의 내용을 모두 지우고 데이터셋의 내용을 INSERT한다. |
-| InsertLoadStrategy      | 데이터셋을 INSERT만 한다.                                    |
-| RefreshLoadStrategy     | 데이터셋의 내용으로 DB를 갱신한다. <br>이미 존재하는 데이터는 UPDATE, 없 는 데이터는 INSERT한다. |
-| UpdateLoadStrategy      | DB에 존재하는 데이터를 UPDATE한다.                           |
-
-
-
-#### 6.4.2 @TestDataSource, 테스트에 사용하는 데이터소스 접근하기
-
-* 지금까지는 설정파일에 지정된 DB 값을 이용해 DataSource를 구성해 자동으로 DB 연결을 만들어 테스트를 진행하도록 설계되었다.
-* 그러나 경우에 따라서 데이터소스에 직접 접근할 필요가 있다.
-* 이를 위해 두 가지 경우가 있다.
-
-```java
-public class ShopDAOTest extends UnitilsJUnit4 {
-    @TestDataSource // - 1
-    private DataSource dataSource;
-    private ShopDAO dao
-   
+public class DBRepositoryTest {
+    private final String protocol = "jdbc:derby:";
+    private final String dbName = "shopdb";
+    private Connection connection;
+    private Repository repository;
+    
     @Before
-    public void initialize () {
-    	this.dao = new ShopDAO();
-    	dao.setDataSource(dataSource);
-        //dao.setDataSource(DatabaseUnitils.getDataSource()); - 2
+    public void setUp() throws Exception {
+    	repository = new DatabaseRepository();
+    	connection = ((DatabaseRepository)repository).getConn();
+    	connection.setAutoCommit(false); // ➊
+    }
+    
+    @After
+    public void tearDown() throws Exception {
+        this.connection.rollback(); // ➋
+        this.connection.close();
+    }
+    
+    @Test
+        public void testAddNewSeller() throws Exception {
+        Seller newSeller = new Seller("hssm", "이동욱", "scala@hssm.kr");
+        repository.add(newSeller);
+        assertEquals(newSeller, repository.findById("hssm"));
     }
 }
 ```
 
-* 1 - 어노테이션 이용
-* 2 -  DatabaseUnitils.getDataSource() 메소드를 이용
 
 
+##### 7.3.1.2 테스트 케이스 작성 시 '입력->수정->삭제' 순서대로 테스트 케이스가 실행되도록 만든다.
 
-#### 6.4.3 @ExpectedDataSet, 예상 데이터셋을 이용한 테스트 메소드 레벨의 결과 비교
-
-* 때로는 결과값을 비교할 때도 있음
-* DbUnit에서는 예상값과 마찬가지로 데이터셋으로 만들어서 상태를 비교
-* Unitils에서는 이럴 때 사용할 수 있도록 @ExpectedDataSet 제공
-* 기존의 코드 예제
+* add → findById(=select) → update → remove 순서로 테스트가 진행
+* 작성이 쉽다.
+* 입력/수정/삭제 중 하나라도 지원되지 않으면 적용 불가능
+* TDD는 사실 선후 관계가 존재하도록 케이스 만드는 걸 권장하지 않음. 독립적으로 수행하는 것으 선호
 
 ```java
 @Test
 public void testAddNewSeller() throws Exception {
-    Seller newSeller = new Seller("hssm","이동욱","scala@hssm.kr");
-    Repository repository = new DatabaseRepository();
+    Seller newSeller = new Seller("hssm", "이동욱", "scala@hssm.kr");
     repository.add(newSeller);
-    
-    ITable actualTable = connection.createQueryTable("SELLER", "select * from seller");
-    IDataSet expectedDataSet = new FlatXmlDataSetBuilder().build(
-    new File("expected_seller.xml"));
-    
-    ITable expectedTable = expectedDataSet.getTable("seller");
-    
-    Assertion.assertEquals(expectedTable, actualTable);
+    assertEquals(newSeller, repository.findById("hssm"));
+}
+
+@Test
+public void testFindByIdSeller() throws Exception {
+    Seller expectedSeller = new Seller("hssm", "이동욱", "scala@hssm.kr");
+    assertEquals(expectedSeller, repository.findById("hssm"));
+}
+
+@Test
+public void testUpdateSeller() throws Exception {
+    Seller seller = new Seller("hssm", "이동욱", "scala@ksug.or.kr");
+    repository.update(seller);
+    assertEquals(expectedSeller, repository.findById("hssm"));
+}
+
+@Test
+public void testRemoveSeller() throws Exception {
+    Seller seller = new Seller("hssm', "이동욱", "scala@hssm.kr");
+    repository.remove(seller);
+    Seller actualSeller = repository.findById("hssm");
+    assertEquals("존재하지 않는 ID입니다", actualSeller.getId());
 }
 ```
 
-* 아래는 @ExpectedDataSet 한 예제
+
+
+##### 7.3.1.3 SQL 스크립트가 테스트 수행 시에 실행되도록 만든다.
+
+* SQL 스크립트를 테스트 수행 전에 실행시키는 방법은 매우 다양하다.
+
+* 테스트 실행 상태를 만드는 작업과 테스트 수행 작업을 분리해서 관리할 수 있다.
+* SQL 문장만 제대로 작성하면 되기 때문에 편리
+* SQL 스크립트를 실행할 유틸리니타 ANT등이 필요
+* 자체 SQL 파일이 많아지면 별도 관리가 필요
+
+##### 	7.3.1.3.1 ANT SQL TASK 이용
+
+##### 	7.3.1.3.2  SQL 스크립트 파일을 실행(자바의 커맨드 실행 방법으로)
+
+##### 	7.3.1.3.3  Spring 프레임워크의 SimpleJdbcTestUtils를 이용
+
+##### 7.3.1.4 DbUnit을 사용한다.
+
+* 앞에서 많이 봄
+
+
+
+#### 7.3.2 테스트 전후의 데이터베이스 상태를 비교하는 방법
+
+##### 7.3.2.1 예상 결과를 미리 다른 테이블에 넣고 대상 테이블과 예상 테이블 각각 SELECT로 비교
+
+* 매우 불편
+
+##### 7.3.2.2 예상 결과를 미리 문자열로 만들고 Select해서 비교
+
+* 대형 DBMS는 실행 결과를 파일로 만들어주는 기능을 제공
+
+##### 7.3.2.3 DbUnit과 Unitils를 함께 사용
+
+* 이미 앞에서 많이 봄
 
 ```java
 @Test
 @ExpectedDataSet("expected_seller.xml")
-public void testAddNewSeller() throws Exception {
+    public void testAddNewSeller() throws Exception {
     Seller newSeller = new Seller("hssm","이동욱","scala@hssm.kr");
     Repository repository = new DatabaseRepository();
     repository.add(newSeller);
 }
 ```
 
-* 직접 예상 데이터셋을 지정하지 않는다면 '‘클래스이름.메소드이름-result.xml' 형식의 파일을 찾음
 
 
+### 7.4 안티패턴((anti-pattern), 전통적으로 잘못 인식되어 있는 테스트 메소드의 리팩토링
 
-#### 6.4.4 @Transactional, 트랜잭션 처리
+* 기본적인좋은 테스트 케이스는 다음과 같은 규칙을 지닌다
+* 하나의 테스트 케이스는 외부와 독립적. 따라서 다른 케이스에 영향을 주거나 받지 않아야 한다.
+* 하나의 일관된 시나리오를 갖고 있어야 한다.
 
-##### 트랜잭션이란
-
-* 하나의 업무가 완결성을 갖고 정상처리되기 위해 필요한 하위 업무나 기능들의 집합.
-* 중간에 하나라도 오류가 발생시 이전에 처리된 업무가 시작 시점으로 돌아감.
-* 흔히 DB에서 DML 문장이 모두 성공하면 커밋, 실패하면 롤백의 상황을 지칭
-
-
-
-* 기본적으로 Unitils의 DB 기능을 테스트에 수행하면 모든 테스트는 트랜잭션이 발생하는 상태로 동작하고 테스트 마지막에 커밋이 발생.
-* 따라서 자신이 사용하는 DB가 트랜잭션을 지원하는지 봐야함
-* 자신의 코드가 트랜잭션으로 동작해도 무방한지 고려해야함
-* 적용하는 방법은 두 가지가 있다.
-* 지정 가능 상태는 commit, rollback, disabled 세 가지가 있다.
-* 위의 예제들은 자동 커밋 상태를 만들기 위해 Unitils의 트랜잭션 기능을 disable로 만들었다.
-* 아래 예제는 테스트 케이스 수행 후 rollback처리 하도록 만듬.
-
-```properties
-# unitiils.properties 파일에 설정한 경우
-DatabaseModule.Transactional.value.default=rollback
-```
+* 그러나 아래의 경우 어떤지 생각해보자.
 
 ```java
-// @Transactional 애노테이션으로 지정한 경우
-@Transactional(TransactionMode.ROLLBACK)
-public class ShopDaoTest extends UnitilsJUnit4 {}
+public class AccountTest {
+    private Account account;
+    
+    @Before
+    public void setUp(){
+    	account = new Account(10000);
+    }
+    
+    @Test
+    public void testDeposit() throws Exception {
+    	account.deposit(1000);
+    	assertEquals(11000, account.getBalance());
+    }
+    
+    @Test
+    public void testWithdraw() throws Exception {
+   		account.withdraw(1000);
+    	assertEquals(9000, account.getBalance());
+    }
+}
 ```
 
-* Unitils는 트랜잭션 관련 기능을 구현하는 데 스프링 프레임워크의 트랜잭 션 관리 기능을 전적으로 차용해서 사용했음.
-* 의존 라이브러리를 열어보면 spring 라이브러리들이 들어 있는 것을 확인할 수 있다.
+* 이때 testWithdraw의 경우 독립적이지가 않다.
+* 그래서 아래 같이 바꾸어 보았다.
 
-
-
-
-
-### 6.5 DBMaintainer: DB를 자동으로 유지보수해주는 DB 유지보수 관리자
-
-*  DBMaintainer는 개발자 각자의 DB 스키마를 SQL 스크립트를 이용해 자동 으로 유지시켜 주는 기능
-
-* 규칙은 다음과 같다.
-
-  1.  프로젝트 내에 폴더를 하나 만들어서 애플리케이션에서 필요한 DB스크립트를 넣어놓는다.
-
-  2. 이때 DB스크립트는 숫자 형식의 버전넘버를 _(언더바)로 구분지어 갖도록 이름짓는다.
-
-     ex) 예: 001_DROP_ALL_TABLES.sql, 002_CREATE_TABLES.sql
-
-  3.  Unitils의 DataSource를 이용하는 테스트 클래스를 실행한다.
-
-  4.  DBMaintainer는 지정된 스크립트 폴더를 모니터링해서 변경된 내용이 있으면 반영한다
-
-* DB 구조를 SQL 스크립트로 관리하고, 추가내용을 덧붙여 반영하도록 만들 때 매우 유용
-* 스크립트 폴더에 변경분만 넣어주면 끝
-* 모니터링 후 동작하는 방식은 두 가지
-* 만일 새로운 스크립트가 추가된 경우 해당 스크립트만 실행
-* 기존 스크립트가 변경된 경우 스키마를 전체 리셋하고 다시 처음부터 스크립트를 실행 (해당 유저의 스키마가 리셋된다.)
-* 이때 번호가 매겨지지 않은 스크립트는 가장 나중에 실행된다.
-* 필요에 따라 스크립트 폴더들도 번호를 붙여 순차적으로 실행되도록 만들 수 있다.
-
-```typescript
-dbscripts/ 01_production/ 001_initial.sql
- 						  002_auditing_updates.sql
- 		   02_latest_dev/ 001_add_user_table.sql
-  						  002_rename_product_id.sql
+```java
+public class AccountTest {
+    @Before
+    public void setUp(){
+    }
+    
+    @Test
+    public void testDeposit() throws Exception {
+        Account account = new Account(10000);
+        account.deposit(1000);
+        assertEquals(11000, account.getBalance());
+    }
+    @Test
+    public void testWithdraw() throws Exception {
+        Account account = new Account(10000);
+        account.withdraw(1000);
+        assertEquals(9000, account.getBalance());
+    }
+}
 ```
 
-
-
-#### 6.5.1 DBMaintainer 기능 활성화시키기
-
-* 프로퍼티에 아래와 같이 적용
-
-```properties
-# 프로젝트 홈 아래에 xsd라는 폴더를 만들어서 dataSetStructureGenerator 위치로 지정
-dataSetStructureGenerator.xsd.dirName=xsd
-# DBMaintainer 기능은 기본값으로는 false
-# 적용 범위는 Unitils의 DataSource를 사용하는 모든 테스트 클래스
-updateDataBaseSchema.enabled=true
-# 스크립트 파일들이 존재하는 폴더를 지정
-dbMaintainer.script.locations=src/dbscripts
-# DBMaintainer가 스크립트들을 버전관리하기 위해 사용하는 테이블
-# 최초에는 없기 때문에 자동으로 만들도록 지정
-dbMaintainer.autoCreateExecutedScriptsTable=true
-```
-
-* D 단순히 스키마의 데이터를 업데이트하는 것과 다르다.
-* 다음과 같은 기능을 제공
-  1. 모든 참조키와 Not Null 제약조건을 비활성화(disable)시키기 때문에 INSERT 스크립트 실행을 편리하게 만들어준다. 
-  2. 시퀀스(sequence) 타입들을 높은 숫자로 업데이트시켜 주기 때문에, 테스트 수행 시에 넣게 되는 데이터들의 기본키(primary key) 값을 고정값으로 지정해도 충돌이 나지 않도록 도와준다(시퀀스가 PK 컬럼으로 쓰일 때). 
-  3. 데이터베이스의 구조를 XSD(XML Schema Definition) 파일로 만들어준다. 해당 파일은 이클립스에서 GUI 형태로 볼 수 있다.
-
-![]({{site.url}}/assets/images/tdd7.PNG)
-
-
-
-#### 프레임워크 VS 라이브러리
-
-* 둘 다 재사용을 목적으로 사용
-* 프레임워크는 복잡한 문제를 해결하기 위해 기본 개념적인 구조, 보통 툴이나 컴포넌트들의 집합체를 의미
-
-* 라이브러리는 스포트웨어를 개발하기 위해 사용되는 클래스나 서브루틴들의 집합체
-* 프레임워크가 더 큰 범위
-* 프레임워크는 층을 갖고 라이브러리는 API만을 갖는다.
-* 프레임워크는 층을 따른 데이터의 흐름(flow)이 있다.
-* 라이브러리는 값의 IN/OUT에 가깝다.
-* 따라서 구조를 층으로 나누어 설명하는 그림이 있으면 프레임워크.
-* 개발자가 만든 코드를 시스템이 호출하면 프레임워크
-* 개발자가 직접 API를 호출하면 라이브러리
-
-
-
-
-
-
-
-
-
-
-
-
-
+* 이런 경우 Account 생성이 중복이다.
+* 비록 중복이 되었지만 시나리오 일부라면 고민해봐야한다. 
+* 가독성 측면에서, TDD 규칙으로 볼때는 이 것이 더 완결성을 가진다.
+* setUp, tearDown 같은 테스트 픽스처 메소드의 경우는 테스트 시나리오에 참가하는 객체들에게 필요한 사전 조건이나 기반 환경을 제공할 때 사용하면 더 좋음.
