--- a/_posts/major/os/2020-05-09-OS-02.md
+++ b/_posts/major/os/2020-05-09-OS-02.md
@@ -6,7 +6,7 @@ categories:
   - 운영체제
 tags:
   - [운영체제]
-last_modified_at: 2020-05-09
+last_modified_at: 2020-05-12
 ---
 
 
@@ -99,7 +99,56 @@ last_modified_at: 2020-05-09
 
 
 
+## 프로그램의 전체적인 실행
 
+### 1. 프로그램의 실행(메모리 load)
+
+![](C:/Users/user/Desktop/myBlog/sunlike0508.github.io/_posts/major/os/{{site.url}}/assets/images/os14.PNG)
+
+* 파일 시스템에 있는 프로그램들이 실제 실행하기 위해서 물리적 메모리에 올라가야 하는데
+
+* 파일 시스템에 존재하는 프로그램의 가상 메모리의 주소와 실제 실행되는 물리적 메모리 주소는 다르다.
+* 이를 변환 시키기 위해 address translation이 필요하다.
+
+* 가상 메모리에 있는 프로세스들의 stack은 해당 프로세스가 실행할될 때 필요한 함수들을 호출하면 함수들의 주소를 쌓는 공간을 말한다. 또한 지역변수도 여기에 쌓임
+
+* data는 말 그대로 data 영역. 전역변수 영역
+
+* code는 함수들이 컴파일되어 기계어로 바뀌어 위치되는 영역
+* 운영체제의 물리적 메모리도 똑같이 stack, data, code 영역으로 구성되어 있음
+
+
+
+### 2. 커널 주소 공간의 내용
+
+![](C:/Users/user/Desktop/myBlog/sunlike0508.github.io/_posts/major/os/{{site.url}}/assets/images/os15.PNG)
+
+* 운영체제는 I/O와 프로세스들에 대한 자원 관리를 해야하므로 각각에 대하여 메모리와 자료구조를 가지고 있음
+* 커널의 stack은 프로세스가 실행되다가 운영체제한테 어떤 일에 대하여 요청. 그럼 운영체제는 stack에 이전 실행되었던 프로세스를 담아두고 운영체제가 CPU 사용하다가 stack을 보고 필요한 프로세스에 다시 권한을 넘겨줌.
+
+
+
+### 3. 사용자 프로그램이 사용하는 함수
+
+#### 3.1 사용자 정의 함수 (프로세스 Address의 Code 영역)
+
+* 자신의 프로그램에서 정의한 함수
+
+#### 3.2 라이브러리 함수 (프로세스 Address의 Code 영역)
+
+* 자신의 프로그램에서 정의하지 않고 갖다 쓴 함수
+* 자신의 프로그램의 실행 파일에 포함되어 있다.
+
+#### 3.3 커널 함수 (커널 Address의 Code 영역)
+
+* 운영체제 프로그램의 함수
+* 커널 함수의 호출 = 시스템 콜
+
+##### 즉, 커널 함수는 CPU의 제어권을 넘겨야하고 위의 두개는 자신의 함수를 사용한다.
+
+* 예시
+
+![](C:/Users/user/Desktop/myBlog/sunlike0508.github.io/_posts/major/os/{{site.url}}/assets/images/os16.PNG)
 
 
 
