--- a/_posts/codewars/2020-04-09-Codewars-09.md
+++ b/_posts/codewars/2020-04-09-Codewars-09.md
@@ -1,5 +1,5 @@
 ---
-title:  "CodeWar 아홉 번째 문제"
+title:  "CodeWars 아홉 번째 문제"
 excerpt: "Product of consecutive Fib numbers"
 classes: wide
 categories:
