--- a/_posts/codewars/2020-04-10-Codewars-14.md
+++ b/_posts/codewars/2020-04-10-Codewars-14.md
@@ -1,5 +1,5 @@
 ---
-title:  "CodeWar 열 네 번째 문제"
+title:  "CodeWars 열 네 번째 문제"
 excerpt: "Perimeter of squares in a rectangle"
 classes: wide
 categories:
