--- a/_posts/codewars/2020-05-12-Codewars-65.md
+++ b/_posts/codewars/2020-05-12-Codewars-65.md
@@ -1,5 +1,5 @@
 ---
-title:  "CodeWar 예순 다섯 번째 문제"
+title:  "CodeWars 예순 다섯 번째 문제"
 excerpt: "Fibonacci, Tribonacci and friends"
 classes: wide
 categories:
@@ -7,7 +7,7 @@ categories:
 tags:
   - CodeWars
   - 6kyu
-last_modified_at: 2020-05-11
+last_modified_at: 2020-05-12
 ---
 
 #### [Fibonacci, Tribonacci and friends](https://www.codewars.com/kata/556e0fccc392c527f20000c5)
