--- a/_posts/codewars/2020-05-12-Codewars-66.md
+++ b/_posts/codewars/2020-05-12-Codewars-66.md
@@ -1,5 +1,5 @@
 ---
-title:  "CodeWar 예순 여섯 번째 문제"
+title:  "CodeWars 예순 여섯 번째 문제"
 excerpt: "Simple Encryption #1 - Alternating Split"
 classes: wide
 categories:
@@ -7,7 +7,7 @@ categories:
 tags:
   - CodeWars
   - 6kyu
-last_modified_at: 2020-05-11
+last_modified_at: 2020-05-12
 ---
 
 #### [Simple Encryption #1 - Alternating Split](https://www.codewars.com/kata/57814d79a56c88e3e0000786)
