코드워즈 수정

--- a/_posts/codewars/2020-04-17-Codewars-29.md
+++ b/_posts/codewars/2020-04-17-Codewars-29.md
@@ -1,5 +1,5 @@
 ---
-title:  "CodeWar 스물 아홉 번째 문제"
+title:  "CodeWars 스물 아홉 번째 문제"
 excerpt: "What's a Perfect Power anyway?"
 classes: wide
 categories:
