--- a/_posts/codewars/2020-04-17-Codewars-28.md
+++ b/_posts/codewars/2020-04-17-Codewars-28.md
@@ -1,5 +1,5 @@
 ---
-title:  "CodeWar 스물 여덟 번째 문제"
+title:  "CodeWars 스물 여덟 번째 문제"
 excerpt: "Convert string to camel case"
 classes: wide
 categories:
