코드워즈 수정

--- a/_posts/codewars/2020-05-11-Codewars-62.md
+++ b/_posts/codewars/2020-05-11-Codewars-62.md
@@ -1,5 +1,5 @@
 ---
-title:  "CodeWar 예순 두 번째 문제"
+title:  "CodeWars 예순 두 번째 문제"
 excerpt: "Multi-tap Keypad Text Entry on an Old Mobile Phone"
 classes: wide
 categories:
