--- a/_posts/codewars/2020-05-09-Codewars-60.md
+++ b/_posts/codewars/2020-05-09-Codewars-60.md
@@ -1,5 +1,5 @@
 ---
-title:  "CodeWar 예순 번째 문제"
+title:  "CodeWars 예순 번째 문제"
 excerpt: "Reverse polish notation calculator"
 classes: wide
 categories:
