--- a/_posts/codewars/2020-05-02-Codewars-48.md
+++ b/_posts/codewars/2020-05-02-Codewars-48.md
@@ -1,5 +1,5 @@
 ---
-title:  "CodeWar 마흔 여덞 번째 문제"
+title:  "CodeWars 마흔 여덞 번째 문제"
 excerpt: "Write Number in Expanded Form"
 classes: wide
 categories:
