--- a/_posts/codewars/2020-05-06-Codewars-53.md
+++ b/_posts/codewars/2020-05-06-Codewars-53.md
@@ -1,5 +1,5 @@
 ---
-title:  "CodeWar 쉰 세 번째 문제"
+title:  "CodeWars 쉰 세 번째 문제"
 excerpt: "Take a Number And Sum Its Digits Raised To The Consecutive Powers And ....¡Eureka!!"
 classes: wide
 categories:
