--- a/_posts/codewars/2020-05-08-Codewars-59.md
+++ b/_posts/codewars/2020-05-08-Codewars-59.md
@@ -1,5 +1,5 @@
 ---
-title:  "CodeWar 쉰 아홉 번째 문제"
+title:  "CodeWars 쉰 아홉 번째 문제"
 excerpt: "Validate Credit Card Number"
 classes: wide
 categories:
