--- a/_posts/codewars/2020-04-30-Codewars-44.md
+++ b/_posts/codewars/2020-04-30-Codewars-44.md
@@ -1,5 +1,5 @@
 ---
-title:  "CodeWar 마흔 네 번째 문제"
+title:  "CodeWars 마흔 네 번째 문제"
 excerpt: "Delete occurrences of an element if it occurs more than n times"
 classes: wide
 categories:
