운영체제-데드락

--- a/_posts/major/os/2020-05-14-OS-05.md
+++ b/_posts/major/os/2020-05-14-OS-05.md
@@ -226,11 +226,14 @@ last_modified_at: 2020-05-14
 
 ##### 5.3.1 해결
 
-* 4명의 사람만 앉게 한다.
-* 젓가락을 두 개 모두 잡을 수 있을 때 젓가락을 가지게 한다.
-* 짝수 철학자는 왼쪽 젓가락부터 집도록 한다. (반대도 가능)
+* 1. 4명의 사람만 앉게 한다.
+* 2. 젓가락을 두 개 모두 잡을 수 있을 때 젓가락을 가지게 한다.
+* 3. 짝수 철학자는 왼쪽 젓가락부터 집도록 한다. (반대도 가능)
 
 ![]({{site.url}}/assets/images/os42.PNG) 
+
+* 2번째 방식을 코드로 구현한 예제
+* 사실은 뒤에 모니터에서의 구현을 세마포어로 변형해서 만든 코드
 
 
 
@@ -243,11 +246,32 @@ last_modified_at: 2020-05-14
 * 자발적 협력이 필요
 * 한 번의 실수가 모든 시스템에 치명적 영향
 
+#### 6.2 모니터란
+
+![]({{site.url}}/assets/images/os43.PNG) 
+
+* 동시 수행중인 프로세스 사이에서 추상적 데이터 타입의 안전한 공유를 보장하기 위한 고급 레벨 동기화 구조
+
+* 공유데이터를 모니터 안에서 정의
+* 공유데이터를 접근하기 위해선 모니터 안에서 제공하는 코드를 통해 접근
+* 프로세스가 직접 lock을 걸 필요가 없고 모니터가 알아서 프로세스의 공유데이터 접근을 통제
+* 모니터에서는 한번에 하나의 프로세스만이 활동. 두 프로세스의 동시접근이 기본적으로 없음
+* 모니터는 프로세스가 모니터 안에 기다릴 수 있도록 condition variable(condition x, y) 사용
+* condition variable은 wait과 signal 연산에 의해서 접근 가능
+* x.wait()을 invoke한 프로세스는 다른 프로세스가 x.signal()을 invoke하기 전까지 suspend된다.
+
+* x.signal()은 정확하게 하나의 suspend된 프로세스를 resume한다.
 
 
 
+#### 6.3 Bounded-Buffer 문제
+
+![]({{site.url}}/assets/images/os43.PNG) 
+
+* 세마포어와 유사하나 다른 점은 자원의 개수를 세지 않음
 
 
 
+#### 6.4 Dining - Philosophers Problem
 
-
+![]({{site.url}}/assets/images/os44.PNG) 
