--- a/_posts/major/os/2020-05-15-OS-06.md
+++ b/_posts/major/os/2020-05-15-OS-06.md
@@ -102,12 +102,13 @@ last_modified_at: 2020-05-15
 ![]({{site.url}}/assets/images/os48.PNG)
 
 * 위 그림 전체적인것은 아니고 프로세스에게 자원을 줄 것인가 말 것인가 판단하는 것만 말함
+* 자원 A,B,C는 최대 가지고 있는 자원이 10, 5, 7
 
 * P0의 경우 최대 자원 가질 경우가 7(A), 5(B), 3(C)인데 현재 가용자원은 3,3,2밖에 안되서 처음에는 할당 안해줌
 
 * P1의 경우 가능 하므로 할당. P1이 끝나면 할당 받은거와 기존에 가지고 있던 3,0,2 자원도 반납
 
-* 이런식으로 반복해서 그림의 아래 시퀀스대로 실행
+* 이런식으로 반복해서 그림의 아래 시퀀스(safe 시퀀스)대로 실행
 
   
 
@@ -116,35 +117,57 @@ last_modified_at: 2020-05-15
 * 데드락이 자주 생기는건 아님. 자원이 여유로운데 굳이 매번 확인하는 것도 오버헤드
 * 대신 주기적으로 검사하고 나서 다시 복구
 
+##### 4.3.1 Detection
+
 1. 자원당 single 인스턴스인 경우에서의 예제 : 자원할당 그래프에서 circle이 곧 데드락을 의미
 
 ![]({{site.url}}/assets/images/os49.PNG)
 
 * 왼쪽은 데드락이 걸린 상황
-* 여기서 자원을 제거한 그래프를 그리면 오른쪽 처럼 그릴 수 있음.(데드락이 걸렸는지 빠르게 확인 가능)
+* 여기서 자원을 제거한 그래프를 그리면 오른쪽 처럼 그릴 수 있음.(데드락이 걸렸는지 빠르게 확인 가능) : Wait for graph 알고리즘
+
+#####  Wait for graph 알고리즘
+
+* 자원당 single 인스턴스인 경우
+
+* 자원 할당 그래프의 변형
+
+* 프로세스만으로 node 구성
+
+* Pi가 가지고 있는 자원을 Pk가 기다리는 경우 Pk->Pi
+
+* Wait for graph에 사이클이 존재하는지를 주기적으로 검사
+
+* O(n^2)
+
+  
 
 2. 자원당 다중 인스턴스인 경우 : 백커스 알고리즘과 유사한 방법을 활용
 
 ![]({{site.url}}/assets/images/os50.PNG)
 
+* 다른 점은 가용자원이 없으면 프로세스가 자원을 내놓음
+* 위의 상황은 데드락은 아님. 일부 프로세스가 자원을 내놓으면 모두 해결이 가능
+* 프로세스들이 자원을 내놓아도 해결이 불가능하면 데드락이 되어버림
 
 
-##### 4.3.1 Wait for graph 알고리즘
 
-* 자원당 single 인스턴스인 경우
-* 자원 할당 그래프의 변형
-* 프로세스만으로 node 구성
-* Pi가 가지고 있는 자원을 Pk가 기다리는 경우 Pk->Pi
-* Wait for graph에 사이클이 존재하는지를 주기적으로 검사
-* O(n^2)
+##### 4.3.2 Recovery
 
+1. process termination : 모두 죽이는 것 vs 하나씩 죽여보는 것
 
+2. Resource Preemption : 비용을 최소화할 희생자(프로세스)를 선정. 안전한 상태로  rollback하여 다시 restart.
+   * 같은 희생자가 발생. starvation 문제
 
 
 
 #### 4.4 데드락 Ignorance
 
-
+* 데드락 자체가 드물다.
+* 이걸 해결 하는 거 자체가 그냥 낭비
+* 현대 범용 시스템들은 거의 이걸 채택...
+* 즉, 데드락이 고전적 문제. 점점 사라지는 문제임
+* 만약에 생기면? 그냥 사람이 프로세스 Kill
 
 
 
