--- a/_posts/major/os/2020-05-12-OS-03.md
+++ b/_posts/major/os/2020-05-12-OS-03.md
@@ -108,7 +108,7 @@ last_modified_at: 2020-05-12
 #### 6.2 short-term 스케쥴러 (단기 or CPU 스케쥴러)
 
 * 어떤 프로세스를 다음번에 running시킬지 결정
-* 프로스세에 CPU를 주는 문제
+* 프로세스에 CPU를 주는 문제
 * 충분히 빨라야 함(millisecond 단위)
 
 
