--- a/_posts/book/git/2020-05-16-progit-01.md
+++ b/_posts/book/git/2020-05-16-progit-01.md
@@ -3,10 +3,10 @@ title:  "Progit - 01"
 excerpt: "버전관리란?"
 classes: wide
 categories:
-  - 운영체제
+  - Pro Git
 tags:
-  - [운영체제]
-last_modified_at: 2020-05-13
+  - [Pro Git]
+last_modified_at: 2020-05-16
 ---
 
 
@@ -28,7 +28,7 @@ last_modified_at: 2020-05-13
 * 그래서 로컬 VCS를 만듬
 * VCS는 데이터베이스를 사용해서 파일 변경 정보를 관리
 
-![]({{site.url}}/assets/images/os01.PNG)
+![]({{site.url}}/assets/images/git01.PNG)
 
 * VCS 종류 중 하나인 RCS(Revision Control System)는 Patch Set(파일에서 변경되는 부분)을 관리
 * Patch Set은 특별한 형식의 파일로 저장
@@ -44,7 +44,7 @@ last_modified_at: 2020-05-13
 
 * CVS, Subversion, Perforce 같은 시스템은 파일을 관리하는 서버가 별도 있고 클라이언트가 중앙 서버에서 파일을 받아 사용
 
-![]({{site.url}}/assets/images/os02.PNG)
+![]({{site.url}}/assets/images/git02.PNG)
 
 * 로컬 VCS에 비해 관리자가 누가 무엇을 하는지 알 수 있음
 * 그러나 중앙서버가 문제가 생기면 모든데 중단됨
@@ -57,7 +57,7 @@ last_modified_at: 2020-05-13
 * 그냥 저장소를 히스토리와 더불어 전부 복제함.
 * 서버가 문제가 생겨도 복제물로 다시 작업 가능
 
-![]({{site.url}}/assets/images/os03.PNG)
+![]({{site.url}}/assets/images/git03.PNG)
 
 * 리모드 저장소가 존재. 많을 수도 있음.
 
