블로그 수정

--- a/_posts/book/git/2020-05-18-progit-07.md
+++ b/_posts/book/git/2020-05-18-progit-07.md
@@ -1,6 +1,6 @@
 ---
-title:  "Pro git - 2.1"
-excerpt: "Git 저장소 만들기"
+title:  "Pro git - 2.2"
+excerpt: "수정하고 저장소에 저장하기"
 classes: wide
 categories:
   - Pro Git
@@ -11,7 +11,7 @@ last_modified_at: 2020-05-18
 
 
 
-# Pro git - Git의 기초
+# Pro git - 수정하고 저장소에 저장하기
 
 * 두 가지 경우가 있다.
 
