--- a/_posts/book/git/2020-05-18-progit-07.md
+++ b/_posts/book/git/2020-05-18-progit-07.md
@@ -392,15 +392,56 @@ Changes to be committed:
     deleted:    PROJECTS.md
 ```
 
+* 커밋하면 파일은 삭제되고 Git은 이 파일을 더는 추적하지 않는다
+* 이미 파일을 수정했거나 Staging Area에(역주 - Git Index라고도 부른다) 추가했다면 `-f` 옵션을 주어 강제로 삭제해야 한다.
+* 반대로 Staging Area에서만 제거하고 워킹 디렉토리에 있는 파일은 지우지 않고 남겨둘 수 있다.
+* .gitIgnore 파일에 추가하는 것을 빼먹었거나 대용량 로그 파일, 컴파일된 파일 같은 것을 실수로 추가했을 때 쓴다. --cached 옵션을 사용한다.
+
+```bash
+$ git rm --cached README
+```
+
+* 여러 개의 파일이나 디렉토리를 한꺼번에 삭제할 수도 있다. 아래와 같이 `git rm` 명령에 file-glob 패턴을 사용한다.
+
+```bash
+$ git rm log/\*.log
+```
+
+* `*` 앞에 `\` 을 사용한 것을 기억하자. 파일명 확장 기능은 쉘에만 있는 것이 아니라 Git 자체에도 있기 때문에 필요하다.
+* 이 명령은 `log/` 디렉토리에 있는 `.log` 파일을 모두 삭제한다
+
+```bash
+$ git rm \*~
+```
+
+* 이 명령은 `~` 로 끝나는 파일을 모두 삭제한다.
 
 
 
+### 10. 파일 이름 변경하기
 
+* 파일 이름의 변경이나 파일의 이동을 명시적으로 관리하지 않는다.
+* 다시 말해서 파일 이름이 변경됐다는 별도의 정보를 저장하지 않는다.
+* 아래와 같이 이름을 변경할 수 있다.
 
+```bash
+$ git mv README.md README
+$ git status
+On branch master
+Your branch is up-to-date with 'origin/master'.
+Changes to be committed:
+  (use "git reset HEAD <file>..." to unstage)
 
+    renamed:    README.md -> README
+```
 
+* 하지만 변경 된 사실은 알고 있다. 그리고 아래는 위의 명령을 수행한 것과 같은 명령어다.
 
+```bash
+$ mv README.md README
+$ git rm README.md
+$ git add README
+```
 
-
-
-
+* git mv 명령은 일종에 단축 명령어다.
+* 중요한 것은 mv만 썼을 때 꼭 rm / add를 실행줘야 한다.
