--- a/_posts/book/git/2020-05-21-progit-09.md
+++ b/_posts/book/git/2020-05-21-progit-09.md
@@ -19,9 +19,16 @@ last_modified_at: 2020-05-21
 
 ```bash
 $ git commit --amend
+$ git commit --amend -m "여기에 커밋 수정 메시지"
 ```
 
+* 커밋 후에 수정한 것이 없고 커밋 메시지만 수정하고 싶으면 사용하면 됨
 
+* 커밋을 했는데 Stage에 추가하는 파일을 빼먹어서 다시 넣고 싶다면 아래와 같이 하면 된다.
 
-
+```bash
+$ git commit -m 'initial commit'
+$ git add forgotten_file
+$ git commit --amend
+```
 
