git pro-05-test

--- a/_posts/book/git/2020-05-21-progit-09.md
+++ b/_posts/book/git/2020-05-21-progit-09.md
@@ -32,3 +32,5 @@ $ git add forgotten_file
 $ git commit --amend
 ```
 
+* 이렇게 하면 커밋 한개로 기록된다. 커밋이 덮어 씌워진것이다.
+* 따라서 정말로 사소하고 마지막 확인 작업에서 빼먹은 파일이 있다면 사용할 때 유용하다.
