--- a/_posts/book/git/2020-05-20-progit-08.md
+++ b/_posts/book/git/2020-05-20-progit-08.md
@@ -52,7 +52,7 @@ Date:   Mon Apr 27 20:14:19 2020 +0900
 
 
 
-#### -p, --patch 옵션
+#### 2. -p, --patch 옵션
 
 * -p는 각 커밋의 diff 결과를 보여줌
 * -< n >를 붙이면 최근 < n > 개의 결과만 보여줌
@@ -120,7 +120,7 @@ index fcddefb..1ed20c0 100644
 
 
 
-### --stat 옵션
+### 3. --stat 옵션
 
 * 각 커밋의 통계 정보를 보여줌
 * 어떤 파일이 수정됐는지, 얼마나 많은 파일이 변경됐는지, 또 얼마나 많은 라인을 추가하거나 삭제했는지 보여준다. 
@@ -186,7 +186,7 @@ Date:   Mon Apr 27 19:51:07 2020 +0900
 
 
 
-### `--pretty` 옵션
+### 4. `--pretty` 옵션
 
 * 히스토리 내용을 보여줄 때 기본 형식 이외에 여러 가지 중에 하나를 선택할 수 있다
 * 몇개 선택할 수 있는 옵션의 값이 있다.
@@ -234,7 +234,7 @@ e4c700cc9b14623aefedc16c4206285ff2ae6a72 랜덤숫자 메소드 코드 작성
 
 
 
-### `format` 옵션
+### 5. `format` 옵션
 
 * 나만의 포맷으로 결과를 출력하고 싶을 때 사용
 * 결과를 다른 프로그램으로 파싱하고자 할 때 유용
@@ -253,7 +253,7 @@ a11bef0 - Scott Chacon, 6 years ago : first commit
 
 
 
-### `--graph` 옵션
+### 6. `--graph` 옵션
 
 * 브랜치와 머지 히스토리를 보여주는 아스키 그래프를 출력한다.
 
@@ -300,13 +300,13 @@ $ git log --pretty=format:"%h %s" --graph
 
 
 
-### git log 주요 옵션
+### 7. git log 주요 옵션
 
 ![]({{site.url}}/assets/images/git09.PNG)
 
 
 
-### 조회 제한조건
+### 8. 조회 제한조건
 
 * Git은 기본적으로 출력을 pager류의 프로그램을 거쳐서 내보내므로 한 번에 한 페이지씩 보여준다.
 * `--since` 나 `--until` 같은 시간을 기준으로 조회하는 옵션은 매우 유용
@@ -366,7 +366,7 @@ Date:   Mon Apr 27 19:51:07 2020 +0900
 
 
 
-### -S  옵션
+### 9. -S  옵션
 
 * 코드에서 추가되거나 제거된 내용 중에 특정 텍스트가 포함되어 있는지를 검색한다.
 * 예를 들어 어떤 함수가 추가되거나 제거된 커밋만을 찾아보려면 아래와 같은 명령을 사용한다.
@@ -387,7 +387,7 @@ $ git log -- path1 path2
 
 
 
-### Merge 커밋을 제외한 순수한 커밋을 확인해보는 명령
+### 10. Merge 커밋을 제외한 순수한 커밋을 확인해보는 명령
 
 * Junio Hamano가 2008년 10월에 Git 소스코드 저장소에서 테스트 파일을 수정한 커밋들이다.
 
