--- a/_posts/book/git/2020-05-21-progit-09.md
+++ b/_posts/book/git/2020-05-21-progit-09.md
@@ -34,3 +34,105 @@ $ git commit --amend
 
 * 이렇게 하면 커밋 한개로 기록된다. 커밋이 덮어 씌워진것이다.
 * 따라서 정말로 사소하고 마지막 확인 작업에서 빼먹은 파일이 있다면 사용할 때 유용하다.
+
+
+
+### 2. 파일 상태를 Unstage로 변경하기
+
+* Staging Area와 워킹 디렉토리 사이를 넘나드는 방법이다.
+
+* git reset HEAD < file>  명령어는 Unstaged 상태로 파일을 변경한다.
+* `git reset` 명령은 매우 위험하다. `--hard` 옵션과 함께 사용하면 더욱 위험하다. 하지만  옵션 없이 사용하면 워킹 디렉토리의 파일은 건드리지 않는다.
+
+#### 예제
+
+1. 2020-05-21-progit-10.md을 생성
+
+```bash
+$ git status
+On branch master
+Your branch is up to date with 'origin/master'.
+
+Untracked files:
+  (use "git add <file>..." to include in what will be committed)
+        _posts/book/git/2020-05-21-progit-10.md
+
+nothing added to commit but untracked files present (use "git add" to track)
+ㅠ
+```
+
+2. 2020-05-21-progit-10.md을 add로 staged 상태로 변경(2020-05-21-progit-09.md 변경되어 같이 추가했다고 가정하자.) 이때 2020-05-21-progit-10.md만 빼고 싶다.
+
+```bash
+user@DESKTOP-AVTBP4I MINGW64 ~/Desktop/myBlog/sunlike0508.github.io (master)
+$ git add .
+
+user@DESKTOP-AVTBP4I MINGW64 ~/Desktop/myBlog/sunlike0508.github.io (master)
+$ git status
+On branch master
+Your branch is up to date with 'origin/master'.
+
+Changes to be committed:
+  (use "git restore --staged <file>..." to unstage)
+        modified:   _posts/book/git/2020-05-21-progit-09.md
+        new file:   _posts/book/git/2020-05-21-progit-10.md
+
+```
+
+3. 2020-05-21-progit-10.md을 git reset HEAD 명령어로 Unstaged로 변경
+
+```bash
+user@DESKTOP-AVTBP4I MINGW64 ~/Desktop/myBlog/sunlike0508.github.io (master)
+$ git reset HEAD _posts/book/git/2020-05-21-progit-10.md
+
+user@DESKTOP-AVTBP4I MINGW64 ~/Desktop/myBlog/sunlike0508.github.io (master)
+$ git status
+On branch master
+Your branch is up to date with 'origin/master'.
+
+Changes to be committed:
+  (use "git restore --staged <file>..." to unstage)
+        modified:   _posts/book/git/2020-05-21-progit-09.md
+
+Untracked files:
+  (use "git add <file>..." to include in what will be committed)
+        _posts/book/git/2020-05-21-progit-10.md
+
+```
+
+
+
+### 3. Modified 파일 되돌리기
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
