--- a/_posts/book/git/2020-05-21-progit-09.md
+++ b/_posts/book/git/2020-05-21-progit-09.md
@@ -104,35 +104,36 @@ Untracked files:
 
 ### 3. Modified 파일 되돌리기
 
+* checkout은 어떤 파일을 수정하고 나서(unstaged 상태일때) 다시 되돌릴 때 사용(최근 커밋된 버전으로 되돌리는 방법)
+* add하기 전에 사용해야 함
+* add하고 나서는 되돌리고 싶으면 reset하고 checkout해야함
 
+```bash
+user@DESKTOP-AVTBP4I MINGW64 ~/Desktop/myBlog/sunlike0508.github.io/_posts/book/git (master)
+$ git status
+On branch master
+Your branch is ahead of 'origin/master' by 1 commit.
+  (use "git push" to publish your local commits)
 
+Changes not staged for commit:
+  (use "git add <file>..." to update what will be committed)
+  (use "git restore <file>..." to discard changes in working directory)
+        modified:   2020-05-21-progit-10.md
 
+no changes added to commit (use "git add" and/or "git commit -a")
 
+user@DESKTOP-AVTBP4I MINGW64 ~/Desktop/myBlog/sunlike0508.github.io/_posts/book/git (master)
+$ git checkout -- 2020-05-21-progit-10.md
 
+user@DESKTOP-AVTBP4I MINGW64 ~/Desktop/myBlog/sunlike0508.github.io/_posts/book/git (master)
+$ git status
+On branch master
+Your branch is ahead of 'origin/master' by 1 commit.
+  (use "git push" to publish your local commits)
 
+nothing to commit, working tree clean
 
+```
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+* 파일 안의 내용도 마지막 commit 전으로 돌아감. 따라서 커밋하지 않고 수정되기 전으로 돌아가기 위해서 되돌리고 싶을 때 사용하는데 중요한 점은 수정했던 시점으로는 다시 돌아갈 수 없다.
+* 보통 이거보다 stash와 branch를 사용하여 수정 전으로 돌아간다.
