--- a/_posts/major/algorithm/2020-05-22-06-Heap.md
+++ b/_posts/major/algorithm/2020-05-22-06-Heap.md
@@ -155,3 +155,26 @@ last_modified_at: 2020-05-22
   * EXTRACT_MAX() : 최대값을 삭제하고 반환
 * 최소 우선순위 큐는 EXTRACT-MAX 대신 EXTRACT-MIN으로 대체
 * MAX HEAP을 이용하여 최대 우선순위 큐를 구현
+
+
+
+#### 13.1 Pseudo Code (Insert)
+
+![]({{site.url}}/assets/images/algo38.PNG)
+
+* 힙 정렬이 된 배열이라고 가정
+
+* 1개가 추가 됐으므로 heap 크기(배열의 크기)가 하나 증가
+* 배열의 마지막 위치에 새로 들어올 숫자를 넣음
+* heapify 할 위치는 당연히 새로 들어온 숫자의 위치(즉, 배열의 마지막 위치)
+* 부모노드와 비교하며 올라가기
+
+
+
+#### 13.2 Pseudo Code (Extract_MAX())
+
+![]({{site.url}}/assets/images/algo39.PNG)
+
+* 20을 삭제함(반환)
+* 맨 마지막 노드(배열의 끝에 있는 원소)를 루트 노드로 옮김
+* 그리고 HEAPIFY(1) 하면 됨 
