--- a/_posts/major/algorithm/2020-05-22-06-Heap.md
+++ b/_posts/major/algorithm/2020-05-22-06-Heap.md
@@ -178,3 +178,7 @@ last_modified_at: 2020-05-22
 * 20을 삭제함(반환)
 * 맨 마지막 노드(배열의 끝에 있는 원소)를 루트 노드로 옮김
 * 그리고 HEAPIFY(1) 하면 됨 
+
+
+
+![]({{site.url}}/assets/images/algo40.PNG)
