--- a/_posts/codewars/2020-05-22-Codewars-85.md
+++ b/_posts/codewars/2020-05-22-Codewars-85.md
@@ -1,5 +1,5 @@
 ---
-title:  "CodeWars 여든 네 번째 문제"
+title:  "CodeWars 여든 다섯 번째 문제"
 excerpt: "Simple Pig Latin"
 classes: wide
 categories:
@@ -7,7 +7,7 @@ categories:
 tags:
   - CodeWars
   - 4kyu
-last_modified_at: 2020-05-21
+last_modified_at: 2020-05-22
 ---
 
 #### [Simple Pig Latin](https://www.codewars.com/kata/520b9d2ad5c005041100000f)
