--- a/_posts/codewars/2020-05-26-Codewars-89.md
+++ b/_posts/codewars/2020-05-26-Codewars-89.md
@@ -1,6 +1,6 @@
 ---
 title:  "CodeWars 여든 아홉 번째 문제"
-excerpt: "Count IP Addresses"
+excerpt: "Permutations"
 classes: wide
 categories:
   - CodeWars
