--- a/_posts/major/algorithm/2020-06-01-12-binaryTree.md
+++ b/_posts/major/algorithm/2020-06-01-12-binaryTree.md
@@ -9,6 +9,10 @@ tags:
 last_modified_at: 2020-06-01
 ---
 
+##### 강의 사이트
+
+* http://www.kocw.net/home/search/kemView.do?kemId=1148815
+
 
 
 # 이진 검색 트리(Binary Search Tree)
