--- a/_posts/major/algorithm/2020-05-22-06-Heap.md
+++ b/_posts/major/algorithm/2020-05-22-06-Heap.md
@@ -9,6 +9,10 @@ tags:
 last_modified_at: 2020-05-22
 ---
 
+##### 강의 사이트
+
+* http://www.kocw.net/home/search/kemView.do?kemId=1148815
+
 
 
 # Heap 정렬
