--- a/_posts/major/algorithm/2020-06-02-13-redTree.md
+++ b/_posts/major/algorithm/2020-06-02-13-redTree.md
@@ -9,6 +9,10 @@ tags:
 last_modified_at: 2020-06-02
 ---
 
+##### 강의 사이트
+
+* http://www.kocw.net/home/search/kemView.do?kemId=1148815
+
 
 
 # Red black tree
