--- a/_posts/book/git/2020-06-05-progit-26.md
+++ b/_posts/book/git/2020-06-05-progit-26.md
@@ -1,12 +1,12 @@
 ---
 title:  "Pro git - 5.1"
-excerpt: "GitLab"
+excerpt: "분산 환경에서의 워크플로"
 classes: wide
 categories:
   - Pro Git
 tags:
   - [Pro Git]
-last_modified_at: 2020-06-03
+last_modified_at: 2020-06-05
 ---
 
 
