--- a/_posts/book/git/2020-06-08-progit-27.md
+++ b/_posts/book/git/2020-06-08-progit-27.md
@@ -42,7 +42,7 @@ last_modified_at: 2020-06-08
 * 명령문으로 시작하는 것도 좋은 방법이다. 
 * `git log --no-merges` 명령으로 메시지 확인 가능
 
-```wiki
+```bash
 영문 50글자 이하의 간략한 수정 요약
 
 자세한 설명. 영문 72글자 이상이 되면
