네트워크&알고리즘

--- a/_posts/major/network/2020-06-11-network-01.md
+++ b/_posts/major/network/2020-06-11-network-01.md
@@ -11,14 +11,6 @@ last_modified_at: 2020-06-11
 
 
 
-# 운영체제 - 개요 1
-
-
-
-# 네트워크
-
-
-
 ## 강의
 
 http://www.kocw.net/home/search/kemView.do?kemId=1159726
@@ -48,10 +40,12 @@ http://www.kocw.net/home/search/kemView.do?kemId=1159726
   * 디지털 : 봉화의 개수에 따라 의미가 다르므로
 
 * 어떻게 하면 전자기 신호를 효율적으로 만들 수 있을까?
+  
   * 자동화
 * 전보 : 1846년 모스부호를 통한 신호를 보냄. 모스가 발명. 모스는 공학자가 아님 예술가.
-  * CDMA : 핸드폰에 쓰이는 기술. 여배우가 발명 (Data Network or Digital Network)
-
+  
+* CDMA : 핸드폰에 쓰이는 기술. 여배우가 발명 (Data Network or Digital Network)
+  
 * 전화 : 1876년 Bell이 발명.  (Voice Network or Analog Network)
 
   * 네트워크(현대적 통신) 개념이 처음으로 등장.
@@ -180,11 +174,12 @@ http://www.kocw.net/home/search/kemView.do?kemId=1159726
 
   * 네트워크 계층 : 어떻게 네트워크 코어가 끝단간 전송을 구현할것인가? 가장 복잡함. 우편 시스템에 비유하면 우체국이라고 보면 됨.
 
-  * 데이터 링크 계층 : 각 링크의 규약. 우체국에서 보면 우체부 기사.
+  * 데이터 링크 계층 : 패킷 하나의 합을 규약. 어떤 네트워크에서 다음 네트워크까지 가는데 가는 기술.  우체국에서 보면 우체부 기사.
 
   * 물리 계층 : 실제 사용하는 선을 어떤 것을 사용할 것인가? 우체국에서 보면 도로. ex) 구리선, 광섬유
 
 * 인터넷 5계층
+  
   * 응용, 표현, 세션을 그냥 응용 계층이라고 통합해서 말함
 
 
