--- a/_posts/major/algorithm/2020-06-13-25-huffman.md
+++ b/_posts/major/algorithm/2020-06-13-25-huffman.md
@@ -1,11 +1,11 @@
 ---
-title:  "최단 경로"
+title:  "압축"
 excerpt: "허프만 코딩"
 classes: wide
 categories:
   - algorithm
 tags:
-  - [algorithm, graph]
+  - [algorithm, huffman]
 last_modified_at: 2020-06-13
 ---
 
