--- a/_posts/major/algorithm/2020-06-13-25-huffman.md
+++ b/_posts/major/algorithm/2020-06-13-25-huffman.md
@@ -173,17 +173,218 @@ public class HuffmanCoding {
 
 
 
+### 7. 구현 2단계 : Huffman Tree
+
+* Huffman coding 알고리즘은 트리들의 집합을 유지하면서 
+* 매 단계에서 가장 frequency가 작은 두 트리를 찾아서 두 트리를 하나로 합친다. 
+* 이런 연산에 가장 적합한 자료구조는 최소 힙(minimum heap)이다. 
+* 즉 힙에 저장된 각각의 원소들은 하나의 트리이다 (노드가 아니라).
 
 
 
+![]({{site.url}}/assets/images/algo219.PNG)
+
+![]({{site.url}}/assets/images/algo220.PNG)
+
+![]({{site.url}}/assets/images/algo221.PNG)
+
+![]({{site.url}}/assets/images/algo222.PNG)
+
+![]({{site.url}}/assets/images/algo223.PNG)
 
 
 
+```java
+class Run implements Comparable<Run> {
+    public byte symbol;
+    public int runLen;
+    public int freq;
+
+ /* 트리의 노드로 사용하기 위해서 왼쪽 자식과 오른쪽 자식 노드 필드를 추가한다. */
+ /* 두 run의 크기관계를 비교하는 compareTo 메서드를 overriding하라. */
+ /* 비교의 기준은 freq이다. */
+}
+
+public class HuffmanCoding {
+    private ArrayList<Run> runs = new ArrayList<Run>();
+    private Heap<Run> heap; /* minimum heap이다. */
+    private Run theRoot = null; /* root of the Huffman tree */
+    
+    private void createHuffmanTree() {
+		heap = new Heap<Run>();
+
+     /* 1. store all runs into the heap. */
+     /* 2. while the heap size > 1 do */
+     /* (1) perform extractMin two times */
+     /* (2) make a combined tree */
+     /* (2) insert the combined tree into the heap. */
+     /* 3. Let theRoot be the root of the tree. */
+    }
+    
+    private void printHuffmanTree() {
+        preOrderTraverse(theRoot, 0);
+    }
+    
+    private void preOrderTraverse(Run node, int depth) {
+        for (int i=0; i<depth; i++)
+			System.out.print(“ ");
+        if (node == null) {
+            System.out.println(“null”);
+        } else {
+            System.out.println(node.toString());
+            preOrderTraverse(node.left, depth + 1);
+            preOrderTraverse(node.right, depth + 1);
+        }
+    }
+}
+```
 
 
 
+### 8. 구현 3단계 : Codeword 부여하기
+
+![]({{site.url}}/assets/images/algo224.PNG)
+
+* Recursion  하게 구현가능
+* 여기서 prefix를 하나의 32비트 정수로 표현한다. 
+* 하지만 32비트 중에 서 하위 몇 비트만이 실제 부여된 codeword이다. 
+* 따라서 codeword의 길이를 따로 유지해야 한다.
+
+```java
+class Run implements Comparable<Run> {
+    public byte symbol;
+    public int runLen;
+    public int freq;
+
+ /* 트리의 노드로 사용하기 위해서 왼쪽 자식과 오른쪽 자식 노드 필드를 추가한다. */
+ /* 노드에 부여된 codeword를 저장하기 위한 필드들을 다음과 같이 추가한다. */
+    
+    public int codeword; 	/* 부여된 codeword를 32비트 정수로 저장 */
+    public int codewordLen; /* 부여된 codeword의 길이. 즉 codeword의 */
+ 							/* 하위 codewordLen비트가 실제 codeword */
+    
+    public Run(byte s, int r){
+        symbol = s;
+        runLen = r;
+        freq = 1;
+    }
+}
+```
+
+* 비트 연산 테스트
+
+```java
+public class Test {
+     public static void main(String args[]) {
+         int a = 60; /* 60 = 0011 1100 */
+         int b = 13; /* 13 = 0000 1101 */
+         int c = 0;
+         
+         c = a & b; /* 12 = 0000 1100 */
+         System.out.println("a & b = " + c );
+         
+         c = a | b; /* 61 = 0011 1101 */
+         System.out.println("a | b = " + c );
+         
+         c = a ^ b; /* 49 = 0011 0001 */
+         System.out.println("a ^ b = " + c );
+         
+         c = a << 1; /* 120 = 0111 1000 */
+         System.out.println("a << 1 = " + c );
+         
+         c = (a << 1) + 1; /* 121 = 0111 1001 */
+         System.out.println(“(a << 1) + 1 = " + c );
+     }
+}
+```
+
+* a << 1이 0이 붙는 codeword이고 (a << 1) +1이 1이 붙는 codeword이다.
 
 
 
+#### 7.1 Codeword Pseudo Code
 
+![]({{site.url}}/assets/images/algo225.PNG)
+
+
+
+```java
+public class HuffmanCoding {
+
+    public void compressFile(RandomAccessFile fIn) {
+        collectRuns(fIn);
+        createHuffmanTree();
+        assignCodewords(theRoot, 0, 0);
+    }
+
+    static public void main (String args[]) {
+        HuffmanCoding app = new HuffmanCoding();
+        RandomAccessFile fIn;
+        
+        try {
+        	fIn = new RandomAccessFile(“sample.txt”,”r");
+        	app.compressFile(fIn);
+        	fIn.close();
+        } catch (IOException io) {
+       		System.err.println("Cannot open " + fileName);
+        }
+    }
+}
+```
+
+
+
+#### 8. 제 4단계 : Codeword 검색하기
+
+* 데이터 파일을 압축하기 위해서는 데이터 파일을 다시 시작부터 읽으면서 run을 하나씩 인식한 후 해당 run에 부여된 codeword를 검색한다. 
+* Huffman트리에는 모든 run들이 리프노드에 위치하므로 검색하기 불편하다. 
+* 검색하기 편리한 구조를 만들어야 한다.
+* java의 hashset은 get 메서드를 제공하지 않으므로 이런 목적으로 사용하기 어렵다.
+
+* HashMap의 Key는 (symbol, runLenth)이고 value는 (codeword, codewordLenght)이다.
+* 이미 만들어 놓은 run 객체들을 key와 value로 동시에 사용하자.
+* 즉, HashMap<Run, Run>을 사용한다.
+
+* HashMap을 만들고 모든 run들을 저장한다.
+
+```java
+HashMap<Run, Run> map = new HashMap<Run, Run>();
+for each run p in Huffman tree do
+    map.put(p, p);
+```
+
+* 데이터 파일을 읽으면서 인식한 각각의 (symbol, length)에 대해서 다음과 같이 codeword를 검색할 수 있다.
+
+```java
+Run p = map.get(new Run(symbol, length));
+Use the codeword in p;
+```
+
+```java
+private HashMap<Run, Run> map = new HashMap<Run, Run>();
+
+private void storeRunsIntoHashMap(Run p) {
+	/* huffman 트리의 모든 리프노드들을 map에 recursion으로 put한다. */
+}
+
+public void compressFile(RandomAccessFile fIn) {
+    collectRuns(fIn);
+    createHuffmanTree();
+    assignCodewords(theRoot, 0, 0);
+    storeRunsIntoHashMap(theRoot); // 추가
+}
+```
+
+
+
+*  HashCode로 생성한 run을 가지고 map에 같은 객체가 있는지 확인 하기 위해서는 class Run에 hashCode를 overriding해서 사용해야 한다. 안 그러면 같은 Symbol과 length가 map이 있지만 기존의 hashCode를 사용하면 객체의 hashCode가 다르기 때문에 찾을 수가 없다.
+
+```java
+class Run implements Comparable<Run> {
+    
+    public int hashCode() {
+        return (int) symbol + runLen;
+    }
+}
+```
 
